--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,10 @@
 {
     "name": "Eher/PHPUnit",
+    "description": "Unofficial version of PHPUnit to be handled with Composer.",
     "require": {
         "php": ">=5.3.0",
         "symfony/finder": "*"
-    }
+    },
+    "bin": ["phpunit.php"]
 }
 
