--- a/composer.json
+++ b/composer.json
@@ -3,8 +3,7 @@
     "description": "Unofficial version of PHPUnit to be handled with Composer.",
     "require": {
         "php": ">=5.3.0",
-        "symfony/finder": "*"
+        "symfony/finder": "v2.0.16"
     },
     "bin": ["bin/dbunit", "bin/phpcov", "bin/phpcpd", "bin/phpdcd", "bin/phploc", "bin/phpunit", "bin/phpunit-skelgen"]
 }
-
