--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "zerkalica/PHPUnit",
+    "name": "zerkalica/phpunit",
     "description": "Unofficial version of PHPUnit to be handled with Composer.",
     "require": {
         "php": ">=5.3.0",
