--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,7 @@
     "name": "zerkalica/phpunit",
     "description": "Unofficial version of PHPUnit to be handled with Composer.",
     "require": {
-        "php": ">=5.3.0",
-        "symfony/finder": "v2.0.16"
+        "php": ">=5.3.0"
     },
     "bin": ["bin/dbunit", "bin/phpcov", "bin/phpcpd", "bin/phpdcd", "bin/phploc", "bin/phpunit", "bin/phpunit-skelgen"]
 }
